Rename MessageFactory actor()
This now constructs an occurrence, not an actor endpoint.